[package]
name = "marketplace"
version = "0.1.0"
edition = "2018"
authors = ["Ryo Kanazawa"]
description = "A Smart contract for implementing NFT Marketplace for the Casper network."
readme = "README.md"
documentation = ""
homepage = ""
repository = ""
license-file = "../LICENSE"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
hex = { version = "0.4.3", default-features = false }
base64 = { version = "0.13.0", default-features = false, features = ["alloc"] }
casper_types_derive = "0.1.0"
tiny-keccak={version = "2.0.2", features = ["keccak"]}
contract-utils = { path = "../utils/contract-utils" }

[[bin]]
name = "contract"
path = "bin/marketplace.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true

